--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -5,6 +5,12 @@
             "n": { "content": "$1" }
         }
     },
+    "passwords_min_length": {
+        "message": "Пароль должен состоять как минимум из $n$ символов",
+        "placeholders": {
+            "n": { "content": "$1" }
+        }
+    },
     "you_have_unlocked_groups": {
         "message": "У вас есть $n$ разблокированных приватных групп. Не забудьте заблокировать их обратно, когда они вам больше не понадобятся.",
         "placeholders": {
