--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -147,7 +147,7 @@
     "override_existing_match": { "message": "If the new group name matches an existing one, override it" },
     "only_private_groups_incognito": { "message": "Hide open groups from browser incognito (private mode)" },
     "export_tab_groups": { "message": "Export Tab Groups" },
-    "export_tab_groups_desc": { "message": "Export all of your tab groups. Keep in mind that private groups are not going to be exported. If you want to export them, you need to do it for each private group separately." },
+    "export_tab_groups_desc": { "message": "Export all private and public groups. We recommend protecting your export with a password." },
     "no_groups_export": { "message": "No groups to export" },
     "import_groups": { "message": "Import Tab Groups" },
     "import_private_and_open_groups": { "message": "Import private and open groups." },
@@ -173,5 +173,6 @@
     "make_group_open": { "message": "Make group open" },
     "are_you_sure_to_make_group_open": { "message": "Are you sure you want to make this group open? It means that you don't need to enter a password to access this group" },
     "group_is_now_open": { "message": "This group is now open" },
+    "protect_export_using_pass": { "message": "Protect export with a password (recommended)" },
     "remember_pass_after_unlock_desc": { "message": "If you disable this option, you will need to enter a password everytime when you want to lock any private group. Keeping this option enabled saves password in temporary and secure storage and allows you to lock groups back without entering your password" }
 }
