--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -147,7 +147,7 @@
     "override_existing_match": { "message": "Если имя новой группы совпадает с существующим, замените его" },
     "only_private_groups_incognito": { "message": "Скрыть открытые группы из окон браузера в режиме инкогнито (приватном режиме)" },
     "export_tab_groups": { "message": "Экспортировать группы вкладок" },
-    "export_tab_groups_desc": { "message": "Экспортируйте все группы вкладок. Приватные группы не будут экспортированы. Чтобы экспортировать их, сделайте это для каждой группы отдельно." },
+    "export_tab_groups_desc": { "message": "Экспортируйте все приватные и открытые группы. Мы рекомендуем защитить экспорт паролем." },
     "no_groups_export": { "message": "Нет групп для экспорта" },
     "import_groups": { "message": "Импортировать группы вкладок" },
     "import_private_and_open_groups": { "message": "Импортировать приватные и открытые группы." },
@@ -173,5 +173,6 @@
     "make_group_open": { "message": "Сделать группу открытой" },
     "are_you_sure_to_make_group_open": { "message": "Вы уверены, что хотите сделать эту группу открытой? Это означает, что для доступа к этой группе не нужно вводить пароль" },
     "group_is_now_open": { "message": "Эта группа теперь открыта" },
+    "protect_export_using_pass": { "message": "Защитить экспорт паролем (рекомендуется)" },
     "remember_pass_after_unlock_desc": { "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль" }
 }
