refactor: improve NewPasswordPopup.vue

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -74,7 +74,6 @@
     "no_tabs_found": { "message": "No tabs found" },
     "no_groups_yet": { "message": "There are no groups yet" },
     "settings": { "message": "Settings" },
-    "enter_new_pass": { "message": "Enter a new password" },
     "pass_updated": { "message": "Password has been updated" },
     "enter_pass": { "message": "Enter a password" },
     "enter_pass_unlock_content": { "message": "Enter a password to unlock the content of this group" },
@@ -140,6 +139,7 @@
     "erase_all_groups_desc": { "message": "After erasing all groups, you will not be able to restore them back in any way. This action will also remove all of your private groups." },
     "i_confirm_want_delete_groups": { "message": "I confirm that I want to delete all groups" },
     "confirm_want_delete_groups": { "message": "Confirm that you want to delete all groups" },
+    "confirm": { "message": "Confirm" },
     "all_groups_deleted": { "message": "All the groups have been deleted" },
     "show_private_groups_incognito": { "message": "Hide private groups everywhere but incognito (private) windows" },
     "settings_saved": { "message": "Settings have been saved" },
