--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -74,7 +74,6 @@
     "no_tabs_found": { "message": "Вкладки не найдены" },
     "no_groups_yet": { "message": "Группы пока отсутствуют" },
     "settings": { "message": "Настройки" },
-    "enter_new_pass": { "message": "Введите новый пароль" },
     "enter_pass": { "message": "Введите пароль" },
     "enter_pass_unlock_content": { "message": "Введите пароль для разблокировки содержимого этой группы" },
     "wrong_pass": { "message": "Неверный пароль" },
@@ -140,6 +139,7 @@
     "erase_all_groups_desc": { "message": "После удаления всех групп вы не сможете их восстановить. Это действие также приведет к удалению всех ваших приватных групп." },
     "i_confirm_want_delete_groups": { "message": "Я подтверждаю, что хочу удалить все группы" },
     "confirm_want_delete_groups": { "message": "Подтвердите, что хотите удалить все группы" },
+    "confirm": { "message": "Подтвердить" },
     "all_groups_deleted": { "message": "Все группы удалены" },
     "show_private_groups_incognito": { "message": "Скрывать приватные группы везде, кроме окон в режиме инкогнито (приватных)" },
     "settings_saved": { "message": "Настройки сохранены" },
