--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -75,7 +75,6 @@
     "no_groups_yet": { "message": "还没有组" },
     "settings": { "message": "设置" },
     "pass_updated": { "message": "密码已更新" },
-    "enter_new_pass": { "message": "输入新密码" },
     "enter_pass": { "message": "输入密码" },
     "enter_pass_unlock_content": { "message": "输入密码以解锁该组内容" },
     "wrong_pass": { "message": "密码错误" },
@@ -140,6 +139,7 @@
     "erase_all_groups_desc": { "message": "删除所有群组后，您将无法以任何方式恢复它们。此操作还将移除您所有的私人群组。" },
     "i_confirm_want_delete_groups": { "message": "我确认要删除所有组" },
     "confirm_want_delete_groups": { "message": "确认要删除所有组" },
+    "confirm": { "message": "确认" },
     "all_groups_deleted": { "message": "所有组已被删除" },
     "show_private_groups_incognito": { "message": "在除隐身（私密）窗口外的所有位置隐藏私人群组" },
     "settings_saved": { "message": "设置已保存" },
