--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -53,6 +53,7 @@
     "yes": { "message": "是" },
     "no": { "message": "否" },
     "lock": { "message": "锁定" },
+    "unlock": { "message": "解锁" },
     "rebind": { "message": "重新绑定" },
     "bound_to_url": { "message": "绑定到 URL" },
     "opened_tabs_times": { "message": "打开标签页次数" },
