chore: change ImportSection to use EnterPasswordPopup
for locked imports

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -86,6 +86,9 @@
     "enter_pass_unlock_content": {
         "message": "Enter a password to unlock the content of this group"
     },
+    "enter_pass_unlock_file": {
+        "message": "Enter a password to unlock the content of the import file"
+    },
     "wrong_pass": { "message": "Incorrect password" },
     "cant_remember_pass": {
         "message": "Something went wrong! Cannot remember your password. Please, enter it again"
