--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -85,6 +85,9 @@
     "enter_pass_unlock_content": {
         "message": "Введите пароль для разблокировки содержимого этой группы"
     },
+    "enter_pass_unlock_file": {
+        "message": "Введите пароль для разблокировки содержимоe этого импортируемого файла"
+    },
     "wrong_pass": { "message": "Неверный пароль" },
     "cant_remember_pass": {
         "message": "Что-то пошло не так! Не могу вспомнить ваш пароль. Пожалуйста, введите его снова"
