--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -90,7 +90,7 @@
     },
     "wrong_pass": { "message": "Неверный пароль" },
     "cant_remember_pass": {
-        "message": "Что-то пошло не так! Не могу вспомнить ваш пароль. Пожалуйста, введите его снова"
+        "message": "Введите пароль группы, чтобы заблокировать эту группу"
     },
     "repeat_pass": { "message": "Повторите пароль" },
     "pass_updated": { "message": "Пароль обновлен" },
@@ -212,9 +212,6 @@
         "message": "Только изображения таких форматов разрешены"
     },
     "new_password": { "message": "Новый пароль" },
-    "uses_old_encrypt_impl": {
-        "message": "Эта группа использует старую реализацию шифрования. Вы можете исправить это, разблокировав эту группу и заблокировав ее обратно."
-    },
     "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" },
     "general": { "message": "Общее" },
     "data_control": { "message": "Управление Данными" },
