--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -80,7 +80,7 @@
     "enter_pass_unlock_content": { "message": "输入密码以解锁该组内容" },
     "enter_pass_unlock_file": { "message": "输入密码以解锁导入文件的内容" },
     "wrong_pass": { "message": "密码错误" },
-    "cant_remember_pass": { "message": "出了点问题！无法记住您的密码。请重新输入" },
+    "cant_remember_pass": { "message": "请输入您的群组密码以锁定本群组" },
     "pass_empty": { "message": "密码为空" },
     "repeat_pass": { "message": "重复密码" },
     "passwords_not_match": { "message": "密码不匹配" },
@@ -182,9 +182,6 @@
     "your_emoji_is": { "message": "你的表情符号是" },
     "image_format_allowed": { "message": "仅允许使用以下格式的图片" },
     "new_password": { "message": "新密码" },
-    "uses_old_encrypt_impl": {
-        "message": "该组使用旧版加密实现。您可以通过解锁该组再重新锁定来修复此问题"
-    },
     "nothing_to_paste": { "message": "没有内容可粘贴" },
     "general": { "message": "总则" },
     "data_control": { "message": "数据控制" },
