--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -27,10 +27,6 @@
         "message": "Слишком много попыток. Следующая попытка через $n$ минут",
         "placeholders": { "n": { "content": "$1" } }
     },
-    "bind_group_url": {
-        "message": "Привяжите эту группу к URL ($n$). Это скроет группу отовсюду, кроме указанного URL, добавив дополнительный уровень безопасности",
-        "placeholders": { "n": { "content": "$1" } }
-    },
     "url_must_be_less_than": {
         "message": "URL должен содержать менее $n$ символов",
         "placeholders": { "n": { "content": "$1" } }
@@ -130,7 +126,7 @@
     },
     "group_created_with_tabs": { "message": "Группа создана с вкладками" },
     "close_selected_tabs": { "message": "Закрыть выбранное" },
-    "bind_to_this_url": { "message": "Привязать к URL" },
+    "bind_to_url": { "message": "Привязать к URL" },
     "private_groups_are_secure": {
         "message": "Приватные группы защищены и используют шифрование. Доступ к ним имеют только пользователи с паролем"
     },
@@ -225,6 +221,12 @@
     "group_is_now_open": { "message": "Эта группа теперь открыта" },
     "protect_export_using_pass": {
         "message": "Защитить экспорт паролем (рекомендуется)"
+    },
+    "bind_group_url": {
+        "message": "Привяжите эту группу к URL-адресу. Это скроет группу от всех, кроме указанного вами URL-адреса. Только при открытии Tab Guardian по указанному URL-адресу вам будет показана скрытая группа."
+    },
+    "cannot_bind_to_this_url": {
+        "message": "Вы не можете привязать свою приватную группу к этому URL-адресу."
     },
     "remember_pass_after_unlock_desc": {
         "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль"
