--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -228,6 +228,7 @@
     "cannot_bind_to_this_url": {
         "message": "Вы не можете привязать свою приватную группу к этому URL-адресу."
     },
+    "use_current_url": { "message": "Использовать текущий URL" },
     "remember_pass_after_unlock_desc": {
         "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль"
     }
