--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -194,6 +194,7 @@
     "cannot_bind_to_this_url": {
         "message": "您无法将您的私人群组绑定到此网址。"
     },
+    "use_current_url": { "message": "使用当前网址" },
     "remember_pass_after_unlock_desc": {
         "message": "若禁用此选项，每次锁定私人群组时均需输入密码。保持此选项启用状态，系统会将密码存储在临时且安全的存储空间中，您无需再次输入密码即可重新锁定群组"
     }
