--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -94,11 +94,11 @@
     "add_more_tabs": { "message": "Добавить больше вкладок" },
     "cut_tab": { "message": "Вырезать эту вкладку" },
     "copy_tab": { "message": "Скопировать эту вкладку" },
-    "paste_tabs_here": { "message": "Вставить вкладки здесь" },
+    "paste_tabs": { "message": "Вставить вкладки" },
     "tab_copied": { "message": "Вкладка скопирована" },
     "tab_cut": { "message": "Вкладка вырезана" },
     "delete_this_group": { "message": "Удалить" },
-    "rename_this_group": { "message": "Переименовать" },
+    "rename": { "message": "Переименовать" },
     "additional_options": { "message": "Дополнительные параметры" },
     "enter_group_name": { "message": "Введите имя группы" },
     "group_name": { "message": "Имя группы" },
@@ -138,7 +138,6 @@
     "change_icon": { "message": "Изменить значок" },
     "choose_group_icon": { "message": "Выберите значок группы" },
     "icon_is_set": { "message": "Значок установлен" },
-    "export_this_group": { "message": "Экспортировать" },
     "rebind_to_other_url": { "message": "Привязать к другому URL" },
     "enter_new_url_bind_private_to_new_url": {
         "message": "Введите новый URL для привязки вашей приватной группы. Эта группа будет видна только при посещении указанного URL. Не забудьте заблокировать группу"
@@ -229,6 +228,7 @@
         "message": "Вы не можете привязать свою приватную группу к этому URL-адресу."
     },
     "use_current_url": { "message": "Использовать текущий URL" },
+    "make_private": { "message": "Сделать приватной" },
     "remember_pass_after_unlock_desc": {
         "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль"
     }
