--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -72,6 +72,7 @@
     "no_groups_yet": { "message": "还没有组" },
     "settings": { "message": "设置" },
     "enter_pass": { "message": "输入密码" },
+    "enter_new_pass": { "message": "输入新密码" },
     "enter_pass_unlock_content": { "message": "输入密码以解锁该组内容" },
     "enter_pass_unlock_file": { "message": "输入密码以解锁导入文件的内容" },
     "wrong_pass": { "message": "密码错误" },
