--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -216,7 +216,7 @@
     "remember_pass_after_unlock": {
         "message": "Запомнить мой пароль после разблокировки"
     },
-    "make_group_open": { "message": "Сделать группу открытой" },
+    "make_open": { "message": "Сделать открытой" },
     "are_you_sure_to_make_group_open": {
         "message": "Вы уверены, что хотите сделать эту группу открытой? Это означает, что для доступа к этой группе не нужно вводить пароль"
     },
