--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -85,7 +85,7 @@
         "message": "Введите пароль для разблокировки содержимоe этого импортируемого файла"
     },
     "wrong_pass": { "message": "Неверный пароль" },
-    "cant_remember_pass": {
+    "enter_your_password": {
         "message": "Введите пароль группы, чтобы заблокировать эту группу"
     },
     "repeat_pass": { "message": "Повторите пароль" },
