--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -76,7 +76,7 @@
     "enter_pass_unlock_content": { "message": "输入密码以解锁该组内容" },
     "enter_pass_unlock_file": { "message": "输入密码以解锁导入文件的内容" },
     "wrong_pass": { "message": "密码错误" },
-    "cant_remember_pass": { "message": "请输入您的群组密码以锁定本群组" },
+    "enter_your_password": { "message": "请输入您的群组密码以锁定本群组" },
     "pass_empty": { "message": "密码为空" },
     "repeat_pass": { "message": "重复密码" },
     "passwords_not_match": { "message": "密码不匹配" },
